--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                    <input type="radio" name="" value="paragraphs"><label for="">words</label><br>
                    <input type="radio" name="" value="paragraphs"><label for="">bytes</label><br>
                    <input type="radio" name="" value="paragraphs"><label for="">list</label>
+                   <input type="text" name="" placeholder=" Garri"><br>
                  <input type="checkbox" name="" value="paragraphs">	<label>Start with 'Lorem
                    ipsum dolor sit amet..</label>
                    <input type="file">
